# radio-fg-simu-tools

./: .gitignore  CMakeLists.txt  README.md  calc_F1400_rc.py  calc_Fnu_t.c  calc_S0.py  calc_cluster_counts.py  calc_cluster_number.py  imgs2spectra.py  mkimg_galsyn_freq.py  ra_dec_simu.py  simu_z_m.py
cluster/: .gitignore  Makefile  age_sim.py  alpha_sim.cc  beta_calc.cc  beta_sim.cc  calc_F1400_rcDA.cc  calc_Fnu_mkimg.sh  calc_T_P1400.cc  calc_distance.cc  calc_nmz.cc  calc_ra_dec_z_m_F1400_rcDA_T_alpha_N0_t.sh  calc_s0.cc  calc_totalnum.cc  draw_line.cc  histogram.cc  run_tests.sh  sphxy.cc  sync_decay.py  test_calc_distance.cc  transfer_sur.cc  z_m_simulation.cc
coscalc/: Makefile  adapt_trapezoid.h  coscalc.cpp  coscalc.hpp  test.cpp
data/: dndMdata.txt  dndmdata
fio/: .gitignore  Makefile  README.txt  fio.cc  fio.h  fits2txt.cc  fits_trait.cc  fits_trait.h  fitsfile.cc  fitsfile.h  libfio.cc  region.cc  region.h  region_imp.cc  region_imp.h  txt2fits.cc
halos/: README.md  calc_NN0.c  calc_T_P1400.py  simu_z_m.py
ica/: .gitignore  Makefile  calc_chi.py  calc_residue.py  calc_rms.py  expand_region.py  extract_cluster.py  extract_information.py  extract_information2.py  extract_information_back.py  extract_profile.py  extract_spec.py  extract_spec2.py  extract_spec3.py  fill_hole.cc  freqs.py  identify_cluster.py  img_utils.py  mask_ica.py  mask_ica2.py  mask_ica3.py  mask_ica4.py  mask_img.sh  mask_points.py  mask_rescale.py  mask_rescale2.py  reg2mask.py  reg2mask_old.py  rescale.cc  rescale0.2.py  rescale2.0.py  rescale2.cc  rescale2_0.2.py  rescale2_2.py  (+4 more)
(+37 files in other folders)
